--- a/main.css
+++ b/main.css
@@ -4,7 +4,10 @@
     --color-white-3: #F5F5F5;
     --color-red-4: #FC5185;
 
-    font-family: 'EB Garamond', serif;
+    --font-garamond-p: 'EB Garamond', serif;
+    --font-dancing-s: 'Dancing Script', cursive;
+
+    font-family: var(--font-garamond-p);
     font-weight: 400;
     color: var(--color-blue-1) ;
     margin: 0;
@@ -13,19 +16,21 @@
 
     
 }
+
+/*header*/
  
 header {
     width: 100%;
     height: 56px;
     background-color: white;
 
-    -webkit-box-shadow: 0px 7px 10px -1px rgba(54,79,107,0.44);
-    -moz-box-shadow: 0px 7px 10px -1px rgba(54,79,107,0.44);
-    box-shadow: 0px 7px 10px -1px rgba(54,79,107,0.44);
+    -webkit-box-shadow: 0px 2px 10px -1px rgba(54,79,107,0.44);
+    -moz-box-shadow: 0px 2px 10px -1px rgba(54,79,107,0.44);
+    box-shadow: 0px 2px 10px -1px rgba(54,79,107,0.44);
 
 }
 
-.container {
+.container_header {
 
     max-width: 90%;
     margin: 0 auto;
@@ -40,7 +45,7 @@ header {
 
 }
 
-.container h1 {
+.container_header h1 {
     font-size: 18px;
 }
 
@@ -71,4 +76,165 @@ header {
     gap: 15px;
     width: 60px;
 
+}
+
+/*principal*/
+/** button*/
+
+.container_principal{
+    margin-top: calc(50% - 140px);
+    overflow-x: scroll;
+    position:relative;
+}
+
+
+.container_principal::-webkit-scrollbar { 
+    display: none;
+}
+
+
+.container_principal_category{
+    display: flex;
+    justify-content: space-between;
+    gap: 10px;
+    white-space:nowrap;
+    width: 700px;
+    height: 63px;
+    margin: 0px 20px;
+
+    
+
+}
+
+.container_category_element{
+    border-radius: 25px;
+    background-color: white;
+    width: 120px;
+    height: 40px;
+
+    font-weight: 600;
+
+    display: flex;
+    justify-content: center;
+    align-items: center;
+
+    -webkit-box-shadow: -3px 4px 20px -10px rgba(54,79,107,1);
+    -moz-box-shadow: -3px 4px 20px -10px rgba(54,79,107,1);
+    box-shadow: -3px 4px 20px -10px rgba(54,79,107,1);
+}
+
+/**banner*/
+
+.container_principal_banner{ 
+    width: 100%;
+    height: 320px;
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    grid-template-rows: repeat(6, 1fr);
+    grid-column-gap: 0px;
+    grid-row-gap: 0px;
+
+}
+
+.container_principal_img {
+    object-fit: cover;
+    width: 100%;
+    height: 320px;
+    grid-area: 1 / 1 / 7 / 4;
+
+    
+}
+.container_banner_button{
+    grid-area: 6 / 2 / 6 / 3;
+    border-radius: 25px;
+    border: none;
+    background-color: rgba(54, 79, 107, 0.6) ;
+    width: 137px;
+    height: 34px;
+    color: var(--color-white-3);
+    letter-spacing: 5px;
+    
+    font-family: var(--font-dancing-s);
+}
+
+/**icons forms*/
+.container_principal_i {
+    overflow-x: scroll;
+    position:relative;
+    height: 60px;
+}
+
+/*no mostrar el srcollbar*/
+.container_principal_i::-webkit-scrollbar { 
+    display: none;
+}
+
+.container_principal_icons{
+    width: 650px;
+    display: flex;
+    justify-content: space-around;
+    margin: 30px 10px;
+
+}
+
+.container_icons_elements{
+    width: 52px;
+    height: 23px;
+}
+
+/**button*/
+.container_principal_button{
+    margin-top: 50px;
+}
+
+.container_button_line{
+   width: 100%;
+   background-color: var(--color-blue-1);
+   height: 1px;
+
+   position: relative;
+}
+
+.container_button_see {
+    width: 130px;
+    height: 38px;
+    border-radius: 25px;
+    border: 2px solid var(--color-blue-1);
+    background-color: white;
+    color: var(--color-red-4);
+    font-weight: 600;
+    letter-spacing: 1px;
+    position: absolute;
+    top: -19px;
+    left: calc(50% - 65px );
+}
+
+/*Content secundary*/
+
+.container_secondary_title{
+    margin-top: 80px;
+}
+
+.container_secondary_line{
+    width: 100%;
+   background-color: var(--color-blue-1);
+   height: 1px;
+
+   position: relative;
+}
+
+.container_secondary_text{
+    width: 100px;
+    height: 38px;
+    padding-left: 5px;
+    background-color: white;
+    color: var(--color-blue-1);
+    font-weight: 600;
+    letter-spacing: 1px;
+    position: absolute;
+    top: -12px;
+    left: calc(50% - 130px );
+
+    font-family: var(--font-dancing-s);
+    font-size: 20px;
 }
